[package]
name    = "miden-distaff"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "distaff"
path = "src/main.rs"

[dependencies]
anyhow                    = { version = "1.0" }
clap                      = { features = ["derive"], version = "4.5" }
crossterm                 = { version = "0.27" }
dirs                      = { version = "6" }
miden-client              = { features = ["tonic"], version = "0.13" }
miden-client-cli          = { version = "0.13" }
miden-client-sqlite-store = { version = "0.13" }
miden-crypto              = { version = "0.19" }
miden-protocol            = { version = "0.13" }
ratatui                   = { version = "0.27" }
rusqlite                  = { features = ["bundled"], version = "0.36" }
tokio                     = { features = ["rt-multi-thread"], version = "1.48" }
